Resolves: tdf#103051 pdf export assumed 1bit bitmaps were N1BitMsbPal

Change-Id: I2268d8b74f187d07f161f42cc9530be3ebbc86d0